# nlp-flashcard-project

./: .env.example  .gitattributes  .gitignore  README.md  README.old.md  app.py  main.py  plots.py  pyproject.toml  query.py  requirements.txt  test.py
base_model/: evaluate.py  main.py  retriever.py  string_utils.py
results/: analysis.ipynb  em_analysis.ipynb  em_scores.csv  f1_analysis.ipynb  f1_scores.csv  read_time.tex  retrieval_time.tex  timings.csv  timings_analysis.ipynb
src/: es_retriever.py  evaluation.py  fais_retriever.py  reader.py
src/models/: dpr.faiss  longformer.faiss  paragraphs_embedding.faiss
src/readers/: base_reader.py  dpr_reader.py  longformer_reader.py
src/retrievers/: base_retriever.py  es_retriever.py  fais_retriever.py  faiss_retriever.py
src/utils/: log.py  preprocessing.py  timing.py
